--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ keywords = ["flexi", "time", "management"]
 [tool.poetry.dependencies]
 python = "^3.9"
 click = "^8.1.3"
+rich = "^13.6.0"
 
 [tool.poetry.scripts]
 flexi = "flexi.__main__:main"
@@ -117,7 +118,7 @@ ignore = [
     "ANN401", # disallows Any, but some elements should be Any when they are external
     "B024", # forces abstract classes to have at least one abstract method, but sometimes a class is virtually abstract
     "D100", # Missing docstring in public module
-    "D105", # docstrings on magic methods, useless docstrings are well known 
+    "D105", # docstrings on magic methods, useless docstrings are well known
     "E501" # line size, but bug-bear already set it with a tolerance of 10% (B950)
 ]
 
