--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,8 +34,8 @@ repos:
         entry: poetry run flake8
         language: system
         types: [python]
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.3.0
+    hooks:
       - id: mypy
-        name: mypy
-        entry: poetry run mypy .
-        language: system
-        types: [python]
+        args: [--config-file=.github/linters/.mypy.ini]
