--- a/.github/linters/.mypy.ini
+++ b/.github/linters/.mypy.ini
@@ -4,6 +4,9 @@ disallow_untyped_defs = True
 [mypy-tests.*]
 ignore_errors = True
 
+[mypy-nox.*]
+ignore_missing_imports = True
+
 [mypy-click.*]
 ignore_missing_imports = True
 
