--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ click = "^8.1.3"
 rich = "^13.6.0"
 
 [tool.poetry.scripts]
-flexi = "flexi.__main__:main"
+flexi = "flexi.__main__:flexi"
 
 [tool.poetry.group.dev.dependencies]
 # runner
@@ -39,7 +39,6 @@ pygments = "^2.14.0"
 sphinx = "^6.1.3"
 sphinx-autodoc-typehints = "^1.22"
 
-
 [tool.coverage.paths]
 source = ["flexi"]
 
@@ -51,17 +50,10 @@ source = ["flexi"]
 show_missing = true
 fail_under = 100
 
-
-[tool.isort]
-profile = "black"
-skip_gitignore = true
-
-
 [tool.mypy]
 strict = true
 exclude = ["noxfile.py", "tests/"]
 explicit_package_bases = true
-
 
 [tool.ruff]
 select = [
