--- a/.github/linters/.mypy.ini
+++ b/.github/linters/.mypy.ini
@@ -1,14 +1,8 @@
 [mypy]
 disallow_untyped_defs = True
 
+[mypy-*.*]
+ignore_missing_imports = True
+
 [mypy-tests.*]
 ignore_errors = True
-
-[mypy-nox.*]
-ignore_missing_imports = True
-
-[mypy-click.*]
-ignore_missing_imports = True
-
-[mypy-toml.*]
-ignore_missing_imports = True
