--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,9 @@ pygments = "^2.14.0"
 # docs
 sphinx = "^6.1.3"
 sphinx-autodoc-typehints = "^1.22"
+# env
+python-dotenv = "^1.0.0"
+types-toml = "^0.10.8.7"
 
 [tool.coverage.paths]
 source = ["flexi"]
