--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,7 +24,9 @@ jobs:
           python-version: 3.9
 
       - name: Install Poetry
-        run: pip install pytest poetry==1.4.2
+        run: |
+          pip install poetry==1.4.2
+          pip install -e .
 
       - name: Add system path to Poetry
         run: echo $HOME/.poetry/bin >> $GITHUB_PATH
