--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "pypy3"
+          python-version: "3.12"
 
       - name: install dependencies
         run: |
@@ -20,7 +20,7 @@ jobs:
           pip install nox==2022.11.21 install poetry==1.4.2
 
       - name: run coverage with nox
-        run: nox --sessions coverage-pypy3
+        run: nox --sessions coverage-3.12
 
       - name: upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
