--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -24,3 +24,8 @@ jobs:
 
       - name: upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          name: codecov-umbrella
+          fail_ci_if_error: true
+          verbose: true
