--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ keywords = ["flexi", "time", "management"]
 python = "^3.9"
 click = "^8.1.3"
 rich = "^13.6.0"
+toml = "^0.10.2"
 
 [tool.poetry.scripts]
 flexi = "flexi.__main__:flexi"
