--- a/pyproject.toml
+++ b/pyproject.toml
@@ -119,8 +119,9 @@ ignore = [
     "D100", # Missing docstring in public module
     "D105", # docstrings on magic methods, useless docstrings are well known
     "E501", # line size, but bug-bear already set it with a tolerance of 10% (B950)
-    "UP007", # ignore or-wise typing for py3.9 support
     "TCH001", # ignore import only for type-checking in "if TYPE_CHECKING" blocks
+    "UP007", # ignore or-wise typing for py3.9 support
+    "UP035", # allow use of typing.Callable
 ]
 
 [tool.ruff.per-file-ignores]
