Enhance: initial log populus

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -130,6 +130,7 @@ ignore = [
     "B024", # forces abstract classes to have at least one abstract method, but sometimes a class is virtually abstract
     "D100", # Missing docstring in public module
     "D105", # docstrings on magic methods, useless docstrings are well known
+    "DTZ011", # naive datetime is used, but it's OK for the user to use it
     "E501", # line size, but bug-bear already set it with a tolerance of 10% (B950)
     "TCH001", # ignore import only for type-checking in "if TYPE_CHECKING" blocks
     "UP007", # ignore or-wise typing for py3.9 support
