feat: compare flexi versions

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,3 +39,4 @@ repos:
             --exclude,
             "migrations|tests|dist|build|typings",
           ]
+        additional_dependencies: ["typing-extensions", "types-requests"]
