--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "click>=8.1.8",
     "pip>=24.3.1",
     "requests>=2.32.3",
+    "xdg-base-dirs>=6.0.2",
 ]
 
 [project.scripts]
