--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,6 +37,7 @@ repos:
             --strict,
             --ignore-missing-imports,
             --allow-untyped-decorators,
+            --allow-subclassing-any,
             --exclude=migrations|tests|dist|build|typings,
           ]
         additional_dependencies: ["typing-extensions", "types-requests"]
