--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dev = [
     "pytest-cov>=6.0.0",
     "pytest-mock>=3.14.0",
     "ruff>=0.9.1",
+    "textual-dev>=1.7.0",
     "types-requests>=2.32.0.20241016",
     "typing-extensions>=4.12.2",
 ]
